# bank-analysis-start

./: .gitignore  .mypy_cache.lnk  README.md  main.py  pyproject.toml
src/: masks.py  widget.py
src/processing/: operations.py
tests/: test_widget.py
