[project]
name = "banking-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "psixo1499",email = "kakaskin947@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.git
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = ["venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = 3.9
strict = true
ignore_missing_imports = true
exclude = "venv|build|dist"

[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
mypy = "^1.17.0"
black = "^25.1.0"
flake8 = "^7.3.0"
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

